@startuml CreateCommandClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

interface Command <<interface>> {
    +execute(db : StudentDatabase, storage : Storage) : CommandResult
    +undo(db : StudentDatabase, storage : Storage) : CommandResult
    +isUndoable() : boolean
}

class CreateCommand implements Command {
    -name : String
    -phone : String
    -email : String
    -address : String
    -course : String
    -createdIndex : int
    +CreateCommand(name : String, phone : String, email : String, address : String, course : String)
    +execute(db : StudentDatabase, storage : Storage) : CommandResult
    ~doCreate(db : StudentDatabase, storage : Storage) : CommandResult
    +undo(db : StudentDatabase, storage : Storage) : CommandResult
    +isUndoable() : boolean
}

class ForceCreateCommand implements Command {
    -inner : CreateCommand
    +ForceCreateCommand(name : String, phone : String, email : String, address : String, course : String)
    +execute(db : StudentDatabase, storage : Storage) : CommandResult
    +isUndoable() : boolean
}

class StudentDatabase {
    +addStudent(student : Student) : void
    +removeStudent(index : int) : Student
    +getStudentCount() : int
    +getAllStudents() : List<Student>
    +findDuplicateFields(name : String, phone : String, email : String, address : String) : Map<Student, List<String>>
}

class Storage {
    +saveStudentList(db : StudentDatabase) : void
}

class "Student.Builder" as StudentBuilder {
    +Builder(name : String)
    +phone(phone : String) : Builder
    +email(email : String) : Builder
    +address(address : String) : Builder
    +course(course : String) : Builder
    +build() : Student
}

class Student {
    +getName() : String
}

class CommandResult {
    -message : String
    -exit : boolean
    -pendingCommand : Command
    +getMessage() : String
    +shouldExit() : boolean
}

class CommandException {
    +CommandException(message : String)
}

' Dependencies
CreateCommand ..> Storage
CreateCommand ..> StudentDatabase
CreateCommand ..> CommandException : <<throws>>
CreateCommand ..> StudentBuilder : <<create>>
CreateCommand ..> CommandResult : <<create>>
CreateCommand ..> ForceCreateCommand : <<create>>

StudentBuilder ..> Student : <<create>>

' Associations
ForceCreateCommand "1" --> "1" CreateCommand : inner

@enduml
